--- a/vpc.yml
+++ b/vpc.yml
@@ -20,5 +20,5 @@ Resources:
       # 2. enter the following command; 
       #  aws cloudformation create-stack --stack-name myFirstTest --region us-east-1 --template-body file://vpc.yml
       # Note: stack-name, region depends on your choice
-      # To update the stack, use this command: aws cloudformation update-stack
-      # To delete stack, use this command: aws cloudformation delete-stack
+      # To update the stack, use this command: aws cloudformation update-stack myFirstTest --region us-east-1 --template-body file://vpc.yml
+      # To delete stack, use this command: aws cloudformation delete-stack myFirstTest --region us-east-1
