--- a/server.yml
+++ b/server.yml
@@ -57,7 +57,8 @@ Resources:
           systemctl start apache2.service
           cd /var/www/html
           echo "This Web Server is Up and Running!" > index.html
-      ImageId: ami-0ac59804e0c10a625
+      # Look for the right AMI for t3.small instance
+      ImageId: ami-0aa2b7722dc1b5612
       # ToDo: Change the key-pair name, as applicable to you.
       KeyName: Terraform
       SecurityGroups:
