--- a/server.yml
+++ b/server.yml
@@ -41,6 +41,10 @@ Resources:
         ToPort: 8080
         CidrIp: 0.0.0.0/0
       - IpProtocol: tcp
+        FromPort: 80
+        ToPort: 80
+        CidrIp: 0.0.0.0/0
+      - IpProtocol: tcp
         FromPort: 22
         ToPort: 22
         CidrIp: 0.0.0.0/0
